# scher

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  LICENSE  PULL-SPEC-from-ithaca-muslins.md  PULL-SPEC-from-penelope-gen4.md  QUERIES.md  README.md  package-lock.json  package.json  tsconfig.json
.claude/: settings.json
.claude/hooks/: plain-queries.sh
.edge/: frame  starmap
conformance/: bare-closing.json  interval-occlusion.json  membership-buckets.json
docs/committees/: 2026-07-06-hallies-notes-and-plain-language.md
dollhouse/: bounds-check.mjs  build.mjs  hyperbolic.html  index.html  story.html
dollhouse/stories/: quakers.story.js
scher-core/: Cargo.toml  README.md
scher-core-wasm/: Cargo.toml  README.md
scher-core-wasm/bench/: bench.mjs
scher-core-wasm/src/: lib.rs
scher-core/src/: contraction.rs  edge_word.rs  lib.rs  poles.rs
scher-core/tests/: bare_closing_fixture.rs  conformance.proptest-regressions  conformance.rs  frame_relative.rs  interval_occlusion_fixture.rs
scher-epistemology/: Cargo.toml
scher-epistemology/src/: lib.rs
scher-state/: Cargo.toml
scher-state/examples/: gravity.rs
scher-state/src/: lib.rs
scher-time/: Cargo.toml
scher-time/src/: lib.rs
src/: biography.ts  board-drop.ts  button-story.ts  card-reads.ts  cell.ts  components.js  components.ts  dom.js  dom.ts  emoji-data.ts  emoji-picker.ts  eventview.ts  fact.ts  fisheye.ts  frames.ts  glossary.html  glossary.ts  index.ts  pathos.ts  play.ts  projection.ts  society.ts  stories.ts  strain.ts  sublimes.ts  trub.ts
test/: MUSLIN-transposition.ts  PLAY.md  address-law.test.ts  algedonic.test.ts  alignment.play.test.ts  assignees.test.ts  bare-closing-hardening.test.ts  biography.play.test.ts  bounds.guard.test.ts  buckets.prop.test.ts  charge-auto-story.play.test.ts  charge-capacitor.play.test.ts  charge-sprint-recursion-eternals.play.test.ts  charge-triage-hybrid.play.test.ts  city-of-death.play.test.ts  components.test.ts  conformance.bare-closing.test.ts  conformance.interval-occlusion.test.ts  conformance.membership-buckets.test.ts  conformance.wasm.test.ts  day-as-story.test.ts  depends.test.ts  drop.test.ts  emoji-charge-doll-a.play.test.ts  emoji-charge-doll-b.play.test.ts  emoji-charge-doll-c.play.test.ts  emoji-picker.test.ts  eventview.test.ts  fact.prop.test.ts  fallen-star.test.ts  fisheye.test.ts  foldGist.anneal.test.ts  foldGist.test.ts  founding-line.play.test.ts  frame-relative.test.ts  frames.prop.test.ts  grounded-capture.play.test.ts  her-own-story.play.test.ts  hyperion.play.test.ts  interval-plain-edges.test.ts  (+25 more)
test/support/: trajectory.ts
