[package]
name = "scher-core-wasm"
version = "0.0.1"
edition = "2021"
license = "MIT"
description = "MUSLIN — the wasm-bindgen boundary around scher-core: one compiled kernel instead of two hand-kept twins. This slice proves the toolchain, the package shape, and the boundary cost; it does not port the whole kernel or retire the TS twin."

# scher builds under its own roof (matches scher-time/scher-state) — this empty
# table keeps cargo from grafting this crate onto penelope-gen4's workspace.
[workspace]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
scher-core = { path = "../scher-core" }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
# The boundary speaks JSON strings both ways (SEAM: serde-wasm-bindgen would shave
# one copy; JSON was chosen for the muslin because the conformance corpus IS JSON).
serde_json = "1"
# Kernel panics surface as real messages in the JS console instead of "unreachable".
console_error_panic_hook = "0.1"

[profile.release]
opt-level = "s"
