[package]
name = "scher-core"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "The pure append-only Society + reads from scher, in Rust. No view layer — the grammar only."

[dependencies]

[dev-dependencies]
proptest = "1"
# conformance corpus replay only (tests/bare_closing_fixture.rs) — never a lib dependency;
# the kernel itself stays dependency-free.
serde_json = "1"
